--- a/myapp/src/Components/WeatherApp/WeatherApp.sass
+++ b/myapp/src/Components/WeatherApp/WeatherApp.sass
@@ -19,4 +19,32 @@
             border-radius: 50%
             border: none
             background: none
-            
+    .weather
+        width: 40%
+        height: 85%
+        margin: auto
+        margin-top: 1rem
+        @media screen and (min-width:300px) and (max-width:500px)
+            width: 90%
+        .weather-section
+            width: 100%
+            height: 33%
+            margin-top: 1rem
+            display: flex
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px
+            .degree
+                width: 60%
+                margin-left: 3rem
+                margin-top: 1rem
+            .weather-icon
+                width: 40%
+            .hour
+                width: 30%
+                margin: 1rem
+                padding: 1rem
+                text-align: center
+            .day
+                width: 15%
+                margin: 1rem
+                padding: 1rem
+                text-align: center
