--- a/myapp/src/Components/WeatherApp/WeatherApp.sass
+++ b/myapp/src/Components/WeatherApp/WeatherApp.sass
@@ -32,12 +32,23 @@
             margin-top: 1rem
             display: flex
             box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px
+            @media screen and (min-width:300px) and (max-width:500px)
+                width: 100%
+                margin: auto
             .degree
                 width: 60%
-                margin-left: 3rem
-                margin-top: 1rem
+                margin-left: 1rem
+                font-size: 5rem
+                font-weight: bold
+                @media screen and (min-width:300px) and (max-width:500px)
+                    font-size: 4rem
+                    margin-top: 1rem
             .weather-icon
                 width: 40%
+                text-align: center
+                font-size: 8rem
+                @media screen and (min-width:300px) and (max-width:500px)
+                    font-size: 7rem
             .hour
                 width: 30%
                 margin: 1rem
@@ -48,3 +59,7 @@
                 margin: 1rem
                 padding: 1rem
                 text-align: center
+                @media screen and (min-width: 300px) and (max-width: 500px)
+                    width: 11%
+                    margin-top: 2rem
+                    padding: 0
